--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,12 @@ body.green {
   --primary-color: #27660e;
   --primary-color-dark: #61d633;
 }
+body.orange {
+  --bg-color: #ffe2f2;
+  --text-color: #fd8700;
+  --primary-color: #913a00;
+  --primary-color-dark: #fd8700;
+}
 
 body{
   background: var(--bg-color);
